[package]
name = "os-rs"
version = "0.1.0"
authors = ["jmurray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3.17"
once_cell = "1.8.0"
bitflags = "1.3.2"
